# COMP2215-C-Coursework-Challenges

./: challenge1Skeleton.c
Basic GPIO Control (C)/: CMakeLists.txt  Skeleton.c  Solution.c
Pico Blink (Assembly)/Skeleton/: main.S
Pico Blink (Assembly)/Solution/: CMakeLists.txt  main.S
archive/: challenge1Solution.c
